ajuste para mobile

--- a/timer/index.html
+++ b/timer/index.html
@@ -14,15 +14,37 @@
     <div class="wrapper">
         <h1>Cronômetro</h1>
         <div class="timer">
+            <p><span id="minutes">00</span>:</p>
             <p><span id="seconds">00</span>:</p>
-            <p><span id="tens">00</span></p>
+            <p><span id="ms">00</span></p>
         </div>
         <div class="control">
             <button id="button-start">Iniciar</button>
             <button id="button-stop">Parar</button>
             <button id="button-reset">Resetar</button>
         </div>
+
+        <div class="laps">
+            <p id="lap-min"></p>
+            <p id="lap-sec"></p>
+            <p id="lap-ms"></p>
+        </div>
+        
+
     </div>
+    <footer>
+        <span>
+            <div class="links">
+                <a id="linkedin" href="https://www.linkedin.com/in/felipe-rudnik-61b696189/" target="_blank"><img
+                    src="ln.png" alt="linkedin"></a>
+                    <a id="github" href="https://github.com/zulark" target="_blank"><img src="git.png" alt="git"></a>
+                </div>
+                <p>Created by - Felipe Rudnik</p>
+        </span>
+
+
+    </footer>
+
 </body>
 
 </html>
