--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="js/script.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cronômetro</title>
 </head>
 
 <body>
@@ -24,11 +24,11 @@
             <button id="button-reset">Resetar</button>
         </div>
 
-        <div class="laps">
+        <!-- <div class="laps">
             <p id="lap-min"></p>
             <p id="lap-sec"></p>
             <p id="lap-ms"></p>
-        </div>
+        </div> -->
         
 
     </div>
@@ -36,8 +36,8 @@
         <span>
             <div class="links">
                 <a id="linkedin" href="https://www.linkedin.com/in/felipe-rudnik-61b696189/" target="_blank"><img
-                    src="ln.png" alt="linkedin"></a>
-                    <a id="github" href="https://github.com/zulark" target="_blank"><img src="git.png" alt="git"></a>
+                    src="img/ln.png" alt="linkedin"></a>
+                    <a id="github" href="https://github.com/zulark" target="_blank"><img src="img/git.png" alt="git"></a>
                 </div>
                 <p>Created by - Felipe Rudnik</p>
         </span>
