--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
     <link rel="icon" href="img/icon.png">
     <link rel="stylesheet" href="css/styles.css">
     <meta charset="UTF-8">
@@ -11,6 +12,11 @@
 </head>
 
 <body>
+    <!-- Created by - Felipe Rudnik -->
+    <!-- LINKEDIN -->
+    <!-- https://www.linkedin.com/in/felipe-rudnik-61b696189/ -->
+    <!-- GITHUB -->
+    <!-- https://github.com/zulark -->
     <div class="wrapper">
         <h1>Cronômetro</h1>
         <div class="timer">
@@ -18,36 +24,21 @@
             <p><span id="seconds">00</span>:</p>
             <p><span id="ms">00</span></p>
         </div>
-        
-              <div class="laps" id="laps">
-                    <p id="lap-min"></p>
-                    <p id="lap-sec"></p>
-                    <p id="lap-ms"></p>
-                </div> 
+
+        <div class="laps" id="laps">
+            <p id="lap-min"></p>
+            <p id="lap-sec"></p>
+            <p id="lap-ms"></p>
+        </div>
         <div class="control">
             <button id="button-start">Iniciar</button>
             <button id="button-stop">Parar</button>
             <button id="button-count-turns">Volta</button>
             <button id="button-reset">Resetar</button>
         </div>
-        
+
 
     </div>
-    <footer>
-        <span>
-            <div class="links">
-                <a id="linkedin" href="https://www.linkedin.com/in/felipe-rudnik-61b696189/" target="_blank"><img
-                    src="img/ln.png" alt="linkedin"></a>
-                    <a id="github" href="https://github.com/zulark" target="_blank"><img src="img/git.png" alt="git"></a>
-                </div>
-                <p>Created by - Felipe Rudnik</p>
-        </span>
-
-
-    </footer>
-
-
-
     <script src="js/script.js"></script>
 
 </body>
